--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "web3": "^1.8.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
@@ -40,6 +41,8 @@
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "prettier": "^2.7.1",
+    "sass": "^1.56.2",
+    "sass-loader": "10",
     "ts-jest": "^29.0.3",
     "vue-jest": "^3.0.4"
   }
