--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
-  "semi": false,
-  "singleQuote": true
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "none",
+  "printWidth": 100,
+  "semicolons": true,
+  "endOfLine": "auto"
 }
